[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "lymarl"
version = "0.1.0"
description = "Lyapunov-guided heterogeneous MAPPO for UE-BS association and BS on/off control"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
logging = [
    "tensorboard>=2.14",
    "wandb>=0.16",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["lymarl*"]
